# EC-thor

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/Modules/: Accumulator.hpp  GroundSegmenter.hpp  Manager.hpp  ObjectDetector.hpp  Reconstructor.hpp
include/Objects/: Buffer.hpp  Cluster.hpp  Params.hpp
include/Utils/: FEC.hpp  Preproc.hpp  Ransac.hpp  ikdTree.hpp
include/modules/: Accumulator.hpp  Detector.hpp  Manager.hpp  Processor.hpp  Reconstructor.hpp
include/objects/: Buffer.hpp  Cluster.hpp  Descriptor.hpp  Grid.hpp  Params.hpp
include/utils/: FEC.hpp  Waggner.hpp
launch/: accel.launch  autocross.launch  simulation.launch  xaloc.launch
notebooks/: cones.ipynb
notebooks/data/: cluster.csv  cluster_figure.csv  clusters_reconstruction.csv
rviz/: ecthor.rviz
src/: main.cpp
src/Modules/: Accumulator.cpp  GroundSegmenter.cpp  Manager.cpp  ObjectDetector.cpp  Reconstructor.cpp
src/Objects/: Cluster.cpp  Params.cpp
src/Utils/: FEC.cpp  Preproc.cpp  Ransac.cpp  ikdTree.cpp
src/modules/: Accumulator.cpp  Detector.cpp  Manager.cpp  Processor.cpp  Reconstructor.cpp
src/utils/: FEC.cpp  Waggner.cpp  ikdTree.cpp
